# Aulas_BackEnd

./: pyproject.toml  teste.py
Ambiguidades_em_problemas_de_programacao/: aula.py
Atibutos_e_metodos/: aula1.py
Boas_praticas/: Exemplo.py  Exemplo2.py  Exemplo3.py  Exemplo4_git_GitHub  Exemplo5.py  Exemplo6.py
Conceito_classes/: aula1.py
Dado_um_endereco_de_IP_valido/: aula1.py
Decorators/: aula.py
Dicionários/: aula.py
Duplicatas_em_arrays/: aula.py
Elemento_majoritario_em_array/: aula.py
Encontrar_elementos_unicos/: aula1.py
Estruturas_Condicionais(if, elif, else)/: aula.py  aula2.py  aula3.py
Exercicios/: exercicio0.py  exercicio1.py  exercicios2.py
Funcoes_Anonimas_Lambdas/: aula.py
Funções/: aula.py
Heranca/: aula1.py
Identificar_numero_ausente/: aula1.py
Instanciacao_de_objetos/: aula1.py
Inteiro_sortudo_array/: aula1.py
Laços de Repetição (for)/: aula.py
Laços de Repetição (while)/: aula.py
List_Comprehension/: aula.py  aula2.py  aula3.py
Listas/: aula.py
Logica_de_contagem_de_letras/: aula.py
Logica_para_manipular_arrays/: aula.py
Operadores relacionais/: aula1.py
Polimorfismo/: aula1.py
Resolucao_de_problemas/: aula1.py  aula2.py  aula3.py  aula5.py  aula6.py  aula7.py  aula8.py
Retornar_a_quantidade_de_numeros_pares/: aula1.py
Retornar_menor_e_maior_numero/: aula1.py
Retornar_todos_elementos_unicos_do_array/: aula1.py
Segmentos_em_strings/: aula.py
String_verdadeiro_Falso/: aula1.py
Try_Except/: aula.py  aula2.py
Yield/: aula.py
bibliotecas_no_python/: aula.py
(+1 files in other folders)
