[project]
name = "back-end"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonardo",email = "Leonardoandre3600@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


